[package]
name = "webttest"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
rcgen = "0.11.1"
ring = "0.16.20"
tokio = { version = "1.28.2", features = ["full"] }
wtransport = "0.1.1"
